parser/yaya.output
Terminals unused in grammar

   tTEXT
   tG
   tOU
   tET
   tPLUSPLUS
   tMOINSMOINS
   tERROR
   tNOT


Grammar

    0 $accept: Input $end

    1 Input: Fonction Input
    2      | %empty

    3 $@1: %empty

    4 Fonction: tINT tID tPO $@1 Params tPF Body

    5 $@2: %empty

    6 Fonction: tINT tMAIN tPO $@2 Params tPF Body

    7 Appel_fn: tID tPO Params tPF tPV

    8 Params: tINT tID SuiteParams
    9       | %empty

   10 SuiteParams: tV tINT tID SuiteParams
   11            | %empty

   12 Body: tAO Instrs tAF

   13 Instrs: BlocAff Instrs
   14       | BlocDecl Instrs
   15       | BlocPrintf Instrs
   16       | BlocIf Instrs
   17       | BlocWhile Instrs
   18       | Appel_fn Instrs
   19       | tRET Expr tPV
   20       | %empty

   21 BlocAff: tID Affectation tPV

   22 Affectation: tEG Expr

   23 BlocDecl: tINT tID suiteDecl tPV
   24         | tCST tINT tID suiteDecl tPV

   25 suiteDecl: Affectation
   26          | tV tID suiteDecl
   27          | %empty

   28 Condition: Condition tAND Condition
   29          | Condition tOR Condition
   30          | Condition tINF Condition
   31          | Condition tSUP Condition
   32          | Condition tINFEG Condition
   33          | Condition tSUPEG Condition
   34          | Condition tEGEG Condition
   35          | Condition tNOTEG Condition
   36          | Expr

   37 $@3: %empty

   38 $@4: %empty

   39 BlocIf: tIF tPO Condition $@3 tPF $@4 Body

   40 $@5: %empty

   41 $@6: %empty

   42 BlocWhile: tWHILE tPO Condition $@5 tPF $@6 Body

   43 $@7: %empty

   44 BlocPrintf: tPRINTF tPO Expr $@7 tPF tPV

   45 Expr: tNB
   46     | tID
   47     | Expr tPLUS Expr
   48     | Expr tMOINS Expr
   49     | Expr tFOIS Expr
   50     | Expr tDIV Expr
   51     | tPO Expr tPF


Terminals, with rules where they appear

$end (0) 0
error (256)
tPRINTF (258) 44
tMAIN (259) 6
tCST (260) 24
tINT (261) 4 6 8 10 23 24
tRET (262) 19
tID (263) 4 7 8 10 21 23 24 26 46
tNB (264) 45
tPV (265) 7 19 21 23 24 44
tV (266) 10 26
tPO (267) 4 6 7 39 42 44 51
tPF (268) 4 6 7 39 42 44 51
tAO (269) 12
tAF (270) 12
tTEXT (271)
tG (272)
tOU (273)
tET (274)
tEG (275) 22
tPLUSPLUS (276)
tMOINSMOINS (277)
tWHILE (278) 42
tIF (279) 39
tERROR (280)
tNOT (281)
tAND (282) 28
tOR (283) 29
tINFEG (284) 32
tSUPEG (285) 33
tINF (286) 30
tSUP (287) 31
tEGEG (288) 34
tNOTEG (289) 35
tPLUS (290) 47
tMOINS (291) 48
tFOIS (292) 49
tDIV (293) 50


Nonterminals, with rules where they appear

$accept (39)
    on left: 0
Input (40)
    on left: 1 2, on right: 0 1
Fonction (41)
    on left: 4 6, on right: 1
$@1 (42)
    on left: 3, on right: 4
$@2 (43)
    on left: 5, on right: 6
Appel_fn (44)
    on left: 7, on right: 18
Params (45)
    on left: 8 9, on right: 4 6 7
SuiteParams (46)
    on left: 10 11, on right: 8 10
Body (47)
    on left: 12, on right: 4 6 39 42
Instrs (48)
    on left: 13 14 15 16 17 18 19 20, on right: 12 13 14 15 16 17 18
BlocAff (49)
    on left: 21, on right: 13
Affectation (50)
    on left: 22, on right: 21 25
BlocDecl (51)
    on left: 23 24, on right: 14
suiteDecl (52)
    on left: 25 26 27, on right: 23 24 26
Condition (53)
    on left: 28 29 30 31 32 33 34 35 36, on right: 28 29 30 31 32 33
    34 35 39 42
BlocIf (54)
    on left: 39, on right: 16
$@3 (55)
    on left: 37, on right: 39
$@4 (56)
    on left: 38, on right: 39
BlocWhile (57)
    on left: 42, on right: 17
$@5 (58)
    on left: 40, on right: 42
$@6 (59)
    on left: 41, on right: 42
BlocPrintf (60)
    on left: 44, on right: 15
$@7 (61)
    on left: 43, on right: 44
Expr (62)
    on left: 45 46 47 48 49 50 51, on right: 19 22 36 44 47 48 49 50
    51


State 0

    0 $accept: . Input $end

    tINT  shift, and go to state 1

    $default  reduce using rule 2 (Input)

    Input     go to state 2
    Fonction  go to state 3


State 1

    4 Fonction: tINT . tID tPO $@1 Params tPF Body
    6         | tINT . tMAIN tPO $@2 Params tPF Body

    tMAIN  shift, and go to state 4
    tID    shift, and go to state 5


State 2

    0 $accept: Input . $end

    $end  shift, and go to state 6


State 3

    1 Input: Fonction . Input

    tINT  shift, and go to state 1

    $default  reduce using rule 2 (Input)

    Input     go to state 7
    Fonction  go to state 3


State 4

    6 Fonction: tINT tMAIN . tPO $@2 Params tPF Body

    tPO  shift, and go to state 8


State 5

    4 Fonction: tINT tID . tPO $@1 Params tPF Body

    tPO  shift, and go to state 9


State 6

    0 $accept: Input $end .

    $default  accept


State 7

    1 Input: Fonction Input .

    $default  reduce using rule 1 (Input)


State 8

    6 Fonction: tINT tMAIN tPO . $@2 Params tPF Body

    $default  reduce using rule 5 ($@2)

    $@2  go to state 10


State 9

    4 Fonction: tINT tID tPO . $@1 Params tPF Body

    $default  reduce using rule 3 ($@1)

    $@1  go to state 11


State 10

    6 Fonction: tINT tMAIN tPO $@2 . Params tPF Body

    tINT  shift, and go to state 12

    $default  reduce using rule 9 (Params)

    Params  go to state 13


State 11

    4 Fonction: tINT tID tPO $@1 . Params tPF Body

    tINT  shift, and go to state 12

    $default  reduce using rule 9 (Params)

    Params  go to state 14


State 12

    8 Params: tINT . tID SuiteParams

    tID  shift, and go to state 15


State 13

    6 Fonction: tINT tMAIN tPO $@2 Params . tPF Body

    tPF  shift, and go to state 16


State 14

    4 Fonction: tINT tID tPO $@1 Params . tPF Body

    tPF  shift, and go to state 17


State 15

    8 Params: tINT tID . SuiteParams

    tV  shift, and go to state 18

    $default  reduce using rule 11 (SuiteParams)

    SuiteParams  go to state 19


State 16

    6 Fonction: tINT tMAIN tPO $@2 Params tPF . Body

    tAO  shift, and go to state 20

    Body  go to state 21


State 17

    4 Fonction: tINT tID tPO $@1 Params tPF . Body

    tAO  shift, and go to state 20

    Body  go to state 22


State 18

   10 SuiteParams: tV . tINT tID SuiteParams

    tINT  shift, and go to state 23


State 19

    8 Params: tINT tID SuiteParams .

    $default  reduce using rule 8 (Params)


State 20

   12 Body: tAO . Instrs tAF

    tPRINTF  shift, and go to state 24
    tCST     shift, and go to state 25
    tINT     shift, and go to state 26
    tRET     shift, and go to state 27
    tID      shift, and go to state 28
    tWHILE   shift, and go to state 29
    tIF      shift, and go to state 30

    $default  reduce using rule 20 (Instrs)

    Appel_fn    go to state 31
    Instrs      go to state 32
    BlocAff     go to state 33
    BlocDecl    go to state 34
    BlocIf      go to state 35
    BlocWhile   go to state 36
    BlocPrintf  go to state 37


State 21

    6 Fonction: tINT tMAIN tPO $@2 Params tPF Body .

    $default  reduce using rule 6 (Fonction)


State 22

    4 Fonction: tINT tID tPO $@1 Params tPF Body .

    $default  reduce using rule 4 (Fonction)


State 23

   10 SuiteParams: tV tINT . tID SuiteParams

    tID  shift, and go to state 38


State 24

   44 BlocPrintf: tPRINTF . tPO Expr $@7 tPF tPV

    tPO  shift, and go to state 39


State 25

   24 BlocDecl: tCST . tINT tID suiteDecl tPV

    tINT  shift, and go to state 40


State 26

   23 BlocDecl: tINT . tID suiteDecl tPV

    tID  shift, and go to state 41


State 27

   19 Instrs: tRET . Expr tPV

    tID  shift, and go to state 42
    tNB  shift, and go to state 43
    tPO  shift, and go to state 44

    Expr  go to state 45


State 28

    7 Appel_fn: tID . tPO Params tPF tPV
   21 BlocAff: tID . Affectation tPV

    tPO  shift, and go to state 46
    tEG  shift, and go to state 47

    Affectation  go to state 48


State 29

   42 BlocWhile: tWHILE . tPO Condition $@5 tPF $@6 Body

    tPO  shift, and go to state 49


State 30

   39 BlocIf: tIF . tPO Condition $@3 tPF $@4 Body

    tPO  shift, and go to state 50


State 31

   18 Instrs: Appel_fn . Instrs

    tPRINTF  shift, and go to state 24
    tCST     shift, and go to state 25
    tINT     shift, and go to state 26
    tRET     shift, and go to state 27
    tID      shift, and go to state 28
    tWHILE   shift, and go to state 29
    tIF      shift, and go to state 30

    $default  reduce using rule 20 (Instrs)

    Appel_fn    go to state 31
    Instrs      go to state 51
    BlocAff     go to state 33
    BlocDecl    go to state 34
    BlocIf      go to state 35
    BlocWhile   go to state 36
    BlocPrintf  go to state 37


State 32

   12 Body: tAO Instrs . tAF

    tAF  shift, and go to state 52


State 33

   13 Instrs: BlocAff . Instrs

    tPRINTF  shift, and go to state 24
    tCST     shift, and go to state 25
    tINT     shift, and go to state 26
    tRET     shift, and go to state 27
    tID      shift, and go to state 28
    tWHILE   shift, and go to state 29
    tIF      shift, and go to state 30

    $default  reduce using rule 20 (Instrs)

    Appel_fn    go to state 31
    Instrs      go to state 53
    BlocAff     go to state 33
    BlocDecl    go to state 34
    BlocIf      go to state 35
    BlocWhile   go to state 36
    BlocPrintf  go to state 37


State 34

   14 Instrs: BlocDecl . Instrs

    tPRINTF  shift, and go to state 24
    tCST     shift, and go to state 25
    tINT     shift, and go to state 26
    tRET     shift, and go to state 27
    tID      shift, and go to state 28
    tWHILE   shift, and go to state 29
    tIF      shift, and go to state 30

    $default  reduce using rule 20 (Instrs)

    Appel_fn    go to state 31
    Instrs      go to state 54
    BlocAff     go to state 33
    BlocDecl    go to state 34
    BlocIf      go to state 35
    BlocWhile   go to state 36
    BlocPrintf  go to state 37


State 35

   16 Instrs: BlocIf . Instrs

    tPRINTF  shift, and go to state 24
    tCST     shift, and go to state 25
    tINT     shift, and go to state 26
    tRET     shift, and go to state 27
    tID      shift, and go to state 28
    tWHILE   shift, and go to state 29
    tIF      shift, and go to state 30

    $default  reduce using rule 20 (Instrs)

    Appel_fn    go to state 31
    Instrs      go to state 55
    BlocAff     go to state 33
    BlocDecl    go to state 34
    BlocIf      go to state 35
    BlocWhile   go to state 36
    BlocPrintf  go to state 37


State 36

   17 Instrs: BlocWhile . Instrs

    tPRINTF  shift, and go to state 24
    tCST     shift, and go to state 25
    tINT     shift, and go to state 26
    tRET     shift, and go to state 27
    tID      shift, and go to state 28
    tWHILE   shift, and go to state 29
    tIF      shift, and go to state 30

    $default  reduce using rule 20 (Instrs)

    Appel_fn    go to state 31
    Instrs      go to state 56
    BlocAff     go to state 33
    BlocDecl    go to state 34
    BlocIf      go to state 35
    BlocWhile   go to state 36
    BlocPrintf  go to state 37


State 37

   15 Instrs: BlocPrintf . Instrs

    tPRINTF  shift, and go to state 24
    tCST     shift, and go to state 25
    tINT     shift, and go to state 26
    tRET     shift, and go to state 27
    tID      shift, and go to state 28
    tWHILE   shift, and go to state 29
    tIF      shift, and go to state 30

    $default  reduce using rule 20 (Instrs)

    Appel_fn    go to state 31
    Instrs      go to state 57
    BlocAff     go to state 33
    BlocDecl    go to state 34
    BlocIf      go to state 35
    BlocWhile   go to state 36
    BlocPrintf  go to state 37


State 38

   10 SuiteParams: tV tINT tID . SuiteParams

    tV  shift, and go to state 18

    $default  reduce using rule 11 (SuiteParams)

    SuiteParams  go to state 58


State 39

   44 BlocPrintf: tPRINTF tPO . Expr $@7 tPF tPV

    tID  shift, and go to state 42
    tNB  shift, and go to state 43
    tPO  shift, and go to state 44

    Expr  go to state 59


State 40

   24 BlocDecl: tCST tINT . tID suiteDecl tPV

    tID  shift, and go to state 60


State 41

   23 BlocDecl: tINT tID . suiteDecl tPV

    tV   shift, and go to state 61
    tEG  shift, and go to state 47

    $default  reduce using rule 27 (suiteDecl)

    Affectation  go to state 62
    suiteDecl    go to state 63


State 42

   46 Expr: tID .

    $default  reduce using rule 46 (Expr)


State 43

   45 Expr: tNB .

    $default  reduce using rule 45 (Expr)


State 44

   51 Expr: tPO . Expr tPF

    tID  shift, and go to state 42
    tNB  shift, and go to state 43
    tPO  shift, and go to state 44

    Expr  go to state 64


State 45

   19 Instrs: tRET Expr . tPV
   47 Expr: Expr . tPLUS Expr
   48     | Expr . tMOINS Expr
   49     | Expr . tFOIS Expr
   50     | Expr . tDIV Expr

    tPV     shift, and go to state 65
    tPLUS   shift, and go to state 66
    tMOINS  shift, and go to state 67
    tFOIS   shift, and go to state 68
    tDIV    shift, and go to state 69


State 46

    7 Appel_fn: tID tPO . Params tPF tPV

    tINT  shift, and go to state 12

    $default  reduce using rule 9 (Params)

    Params  go to state 70


State 47

   22 Affectation: tEG . Expr

    tID  shift, and go to state 42
    tNB  shift, and go to state 43
    tPO  shift, and go to state 44

    Expr  go to state 71


State 48

   21 BlocAff: tID Affectation . tPV

    tPV  shift, and go to state 72


State 49

   42 BlocWhile: tWHILE tPO . Condition $@5 tPF $@6 Body

    tID  shift, and go to state 42
    tNB  shift, and go to state 43
    tPO  shift, and go to state 44

    Condition  go to state 73
    Expr       go to state 74


State 50

   39 BlocIf: tIF tPO . Condition $@3 tPF $@4 Body

    tID  shift, and go to state 42
    tNB  shift, and go to state 43
    tPO  shift, and go to state 44

    Condition  go to state 75
    Expr       go to state 74


State 51

   18 Instrs: Appel_fn Instrs .

    $default  reduce using rule 18 (Instrs)


State 52

   12 Body: tAO Instrs tAF .

    $default  reduce using rule 12 (Body)


State 53

   13 Instrs: BlocAff Instrs .

    $default  reduce using rule 13 (Instrs)


State 54

   14 Instrs: BlocDecl Instrs .

    $default  reduce using rule 14 (Instrs)


State 55

   16 Instrs: BlocIf Instrs .

    $default  reduce using rule 16 (Instrs)


State 56

   17 Instrs: BlocWhile Instrs .

    $default  reduce using rule 17 (Instrs)


State 57

   15 Instrs: BlocPrintf Instrs .

    $default  reduce using rule 15 (Instrs)


State 58

   10 SuiteParams: tV tINT tID SuiteParams .

    $default  reduce using rule 10 (SuiteParams)


State 59

   44 BlocPrintf: tPRINTF tPO Expr . $@7 tPF tPV
   47 Expr: Expr . tPLUS Expr
   48     | Expr . tMOINS Expr
   49     | Expr . tFOIS Expr
   50     | Expr . tDIV Expr

    tPLUS   shift, and go to state 66
    tMOINS  shift, and go to state 67
    tFOIS   shift, and go to state 68
    tDIV    shift, and go to state 69

    $default  reduce using rule 43 ($@7)

    $@7  go to state 76


State 60

   24 BlocDecl: tCST tINT tID . suiteDecl tPV

    tV   shift, and go to state 61
    tEG  shift, and go to state 47

    $default  reduce using rule 27 (suiteDecl)

    Affectation  go to state 62
    suiteDecl    go to state 77


State 61

   26 suiteDecl: tV . tID suiteDecl

    tID  shift, and go to state 78


State 62

   25 suiteDecl: Affectation .

    $default  reduce using rule 25 (suiteDecl)


State 63

   23 BlocDecl: tINT tID suiteDecl . tPV

    tPV  shift, and go to state 79


State 64

   47 Expr: Expr . tPLUS Expr
   48     | Expr . tMOINS Expr
   49     | Expr . tFOIS Expr
   50     | Expr . tDIV Expr
   51     | tPO Expr . tPF

    tPF     shift, and go to state 80
    tPLUS   shift, and go to state 66
    tMOINS  shift, and go to state 67
    tFOIS   shift, and go to state 68
    tDIV    shift, and go to state 69


State 65

   19 Instrs: tRET Expr tPV .

    $default  reduce using rule 19 (Instrs)


State 66

   47 Expr: Expr tPLUS . Expr

    tID  shift, and go to state 42
    tNB  shift, and go to state 43
    tPO  shift, and go to state 44

    Expr  go to state 81


State 67

   48 Expr: Expr tMOINS . Expr

    tID  shift, and go to state 42
    tNB  shift, and go to state 43
    tPO  shift, and go to state 44

    Expr  go to state 82


State 68

   49 Expr: Expr tFOIS . Expr

    tID  shift, and go to state 42
    tNB  shift, and go to state 43
    tPO  shift, and go to state 44

    Expr  go to state 83


State 69

   50 Expr: Expr tDIV . Expr

    tID  shift, and go to state 42
    tNB  shift, and go to state 43
    tPO  shift, and go to state 44

    Expr  go to state 84


State 70

    7 Appel_fn: tID tPO Params . tPF tPV

    tPF  shift, and go to state 85


State 71

   22 Affectation: tEG Expr .
   47 Expr: Expr . tPLUS Expr
   48     | Expr . tMOINS Expr
   49     | Expr . tFOIS Expr
   50     | Expr . tDIV Expr

    tPLUS   shift, and go to state 66
    tMOINS  shift, and go to state 67
    tFOIS   shift, and go to state 68
    tDIV    shift, and go to state 69

    $default  reduce using rule 22 (Affectation)


State 72

   21 BlocAff: tID Affectation tPV .

    $default  reduce using rule 21 (BlocAff)


State 73

   28 Condition: Condition . tAND Condition
   29          | Condition . tOR Condition
   30          | Condition . tINF Condition
   31          | Condition . tSUP Condition
   32          | Condition . tINFEG Condition
   33          | Condition . tSUPEG Condition
   34          | Condition . tEGEG Condition
   35          | Condition . tNOTEG Condition
   42 BlocWhile: tWHILE tPO Condition . $@5 tPF $@6 Body

    tAND    shift, and go to state 86
    tOR     shift, and go to state 87
    tINFEG  shift, and go to state 88
    tSUPEG  shift, and go to state 89
    tINF    shift, and go to state 90
    tSUP    shift, and go to state 91
    tEGEG   shift, and go to state 92
    tNOTEG  shift, and go to state 93

    $default  reduce using rule 40 ($@5)

    $@5  go to state 94


State 74

   36 Condition: Expr .
   47 Expr: Expr . tPLUS Expr
   48     | Expr . tMOINS Expr
   49     | Expr . tFOIS Expr
   50     | Expr . tDIV Expr

    tPLUS   shift, and go to state 66
    tMOINS  shift, and go to state 67
    tFOIS   shift, and go to state 68
    tDIV    shift, and go to state 69

    $default  reduce using rule 36 (Condition)


State 75

   28 Condition: Condition . tAND Condition
   29          | Condition . tOR Condition
   30          | Condition . tINF Condition
   31          | Condition . tSUP Condition
   32          | Condition . tINFEG Condition
   33          | Condition . tSUPEG Condition
   34          | Condition . tEGEG Condition
   35          | Condition . tNOTEG Condition
   39 BlocIf: tIF tPO Condition . $@3 tPF $@4 Body

    tAND    shift, and go to state 86
    tOR     shift, and go to state 87
    tINFEG  shift, and go to state 88
    tSUPEG  shift, and go to state 89
    tINF    shift, and go to state 90
    tSUP    shift, and go to state 91
    tEGEG   shift, and go to state 92
    tNOTEG  shift, and go to state 93

    $default  reduce using rule 37 ($@3)

    $@3  go to state 95


State 76

   44 BlocPrintf: tPRINTF tPO Expr $@7 . tPF tPV

    tPF  shift, and go to state 96


State 77

   24 BlocDecl: tCST tINT tID suiteDecl . tPV

    tPV  shift, and go to state 97


State 78

   26 suiteDecl: tV tID . suiteDecl

    tV   shift, and go to state 61
    tEG  shift, and go to state 47

    $default  reduce using rule 27 (suiteDecl)

    Affectation  go to state 62
    suiteDecl    go to state 98


State 79

   23 BlocDecl: tINT tID suiteDecl tPV .

    $default  reduce using rule 23 (BlocDecl)


State 80

   51 Expr: tPO Expr tPF .

    $default  reduce using rule 51 (Expr)


State 81

   47 Expr: Expr . tPLUS Expr
   47     | Expr tPLUS Expr .
   48     | Expr . tMOINS Expr
   49     | Expr . tFOIS Expr
   50     | Expr . tDIV Expr

    tFOIS  shift, and go to state 68
    tDIV   shift, and go to state 69

    $default  reduce using rule 47 (Expr)


State 82

   47 Expr: Expr . tPLUS Expr
   48     | Expr . tMOINS Expr
   48     | Expr tMOINS Expr .
   49     | Expr . tFOIS Expr
   50     | Expr . tDIV Expr

    tFOIS  shift, and go to state 68
    tDIV   shift, and go to state 69

    $default  reduce using rule 48 (Expr)


State 83

   47 Expr: Expr . tPLUS Expr
   48     | Expr . tMOINS Expr
   49     | Expr . tFOIS Expr
   49     | Expr tFOIS Expr .
   50     | Expr . tDIV Expr

    $default  reduce using rule 49 (Expr)


State 84

   47 Expr: Expr . tPLUS Expr
   48     | Expr . tMOINS Expr
   49     | Expr . tFOIS Expr
   50     | Expr . tDIV Expr
   50     | Expr tDIV Expr .

    $default  reduce using rule 50 (Expr)


State 85

    7 Appel_fn: tID tPO Params tPF . tPV

    tPV  shift, and go to state 99


State 86

   28 Condition: Condition tAND . Condition

    tID  shift, and go to state 42
    tNB  shift, and go to state 43
    tPO  shift, and go to state 44

    Condition  go to state 100
    Expr       go to state 74


State 87

   29 Condition: Condition tOR . Condition

    tID  shift, and go to state 42
    tNB  shift, and go to state 43
    tPO  shift, and go to state 44

    Condition  go to state 101
    Expr       go to state 74


State 88

   32 Condition: Condition tINFEG . Condition

    tID  shift, and go to state 42
    tNB  shift, and go to state 43
    tPO  shift, and go to state 44

    Condition  go to state 102
    Expr       go to state 74


State 89

   33 Condition: Condition tSUPEG . Condition

    tID  shift, and go to state 42
    tNB  shift, and go to state 43
    tPO  shift, and go to state 44

    Condition  go to state 103
    Expr       go to state 74


State 90

   30 Condition: Condition tINF . Condition

    tID  shift, and go to state 42
    tNB  shift, and go to state 43
    tPO  shift, and go to state 44

    Condition  go to state 104
    Expr       go to state 74


State 91

   31 Condition: Condition tSUP . Condition

    tID  shift, and go to state 42
    tNB  shift, and go to state 43
    tPO  shift, and go to state 44

    Condition  go to state 105
    Expr       go to state 74


State 92

   34 Condition: Condition tEGEG . Condition
